zeit.content.article changes
============================

3.20.7 (unreleased)
-------------------

- BUG-480: Assign default template on checkout when the current value is invalid


3.20.6 (2016-08-12)
-------------------

- Count `KEY_UNKNOWN` as dirty, since e.g. `-` or umlauts are mapped to this,
  thus they did not trigger a save previously.


3.20.5 (2016-08-09)
-------------------

- Implement fw-compat for mobile push notifications, since `parse` will be
  removed in 2017. (ZON-3213)


3.20.4 (2016-08-04)
-------------------

- Change default display mode for image blocks to "column-width".


3.20.3 (2016-08-01)
-------------------

- Fix ``available`` check for ``ImageDisplayModeSource`` and
  ``ImageVariantNameSource`` by adapting to ``IArticle``. (ZON-2927)

- Always edit keywords of an article in a separate fold. (ZON-2882)


3.20.2 (2016-07-26)
-------------------

- Extend product config to fix source configuration for testing. (ZON-3171)

- Adjust CSS for images to preview them more like Friedbert. (ZON-3216)

- Hide dropdown to choose variant name for Infographics, since Friedbert
  overwrites the variant name with `original`. (ZON-3216)


3.20.1 (2016-07-21)
-------------------

- Add acquisition attribute to CMS content


3.19 (2016-07-21)
-----------------

- Allow drag&drop for z.c.text objects (ZON-3018).

- Select default template/header_layout according to article
  interfaces (ZON-3088).


3.18.0 (2016-06-20)
-------------------

- Include first body image or video module as IHeaderArea.module (ZON-3088).

- Remove display mode from main image, make variant dependent on
  template/header (ZON-3088).


3.17.0 (2016-06-10)
-------------------

- Split image layout into two separate attributes to avoid combinatorial
  explosion (ZON-2927).


3.16.1 (2016-06-08)
-------------------

- Fix security declaration for IHeaderArea migration code.


3.16.0 (2016-06-08)
-------------------
