@@ -23,6 +23,7 @@ class Checkin(zeit.cms.testing.BrowserTestCase):
                '@@zeit.content.article.Add')
         b.open('@@edit.form.checkin-errors')
         self.assert_ellipsis("""
+            ...Keywords:...Required input is missing...
             ...Title:...Required input is missing...
             ...Ressort:...Required input is missing...
             ...New file name:...Required input is missing...
